@@ -1,6 +1,8 @@
 0.219 2023-06-03
   [New Features]
     * Add IO::Socket#accept method. This has existed, but not documented.
+    * Add IO::Socket::IP#accept method.
+    * Add IO::Socket::UNIX#accept method.
 0.218 2023-06-03
   [Requirement Changes]
     * Require SPVM::Sys 0.520.
